# DoBeeDo

./: .gitignore  CLAUDE.md  README.md  SESSION_NOTES.md  conftest.py  hacs.json  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
custom_components/dobeedo/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  model.py  panel.py  services.py  storage.py
custom_components/dobeedo/www/: dobee-do-panel.js
docs/: DEVELOPMENT_PLAN.md
frontend/: debug-theme-vars.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/api/: dobeedo-api.test.ts  dobeedo-api.ts
frontend/src/panel/: dobee-do-panel.ts
scripts/: prepush.sh  setup_pyenv.sh  test_in_pyenv.sh
tests/: test_import_integration.py
tests/components/dobeedo/: test_manager_crud.py  test_model_and_storage.py  test_ws_get_boards.py
