[project]
name = "dobeedo"
version = "0.0.0"
description = "Home Assistant custom integration for kanban-style task boards"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

